# rul-lstm-rul-prediction

./: .gitignore  Dockerfile  README.md  app.py  best_model.pth  dataset.py  exercise_1.ipynb  model.py  nasa_jet_engine_predictive_maintenance.ipynb  notebook copy.ipynb  notebook.ipynb  predict.ipynb  predict.py  pyproject.toml  requirements.infer.txt  sine_wave_lstm.ipynb  train.py  train_new.py  tuning_results.txt
models/: lstm_model.onnx  lstm_model.pth
sensor-dashboard/src/: App.css  App.tsx
sensor-dashboard/src/components/: SensorDisplay.tsx  Sparkline.tsx
